lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:5: error: type List takes type parameters
  	val Liste:List = getSol()
                  ^Lander:23: error: value =- is not a member of Int
		sens=-1
                    ^